<package format="3">
  <name>benchmark_msgs</name>
  <version>0.0.1</version>
  <description>Benchmark message for flatros2 tests</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rosidl_typesupport_c</build_depend>
  <exec_depend>rosidl_typesupport_c</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
