<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>flatros2</name>
  <version>0.1.0</version>

  <description>An experiment on message in-memory representations for ROS 2.</description>

  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>libflatbuffers-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>python3-dev</build_depend>

  <depend>cv_bridge</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>benchmark_msgs</depend>
  <depend>rmw</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <exec_depend>python3-flatbuffers</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
